feat: New hotel API
