# docs/swagger.json
@@ -18,7 +18,37 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/reservations": {
+        "/reservation": {
+            "get": {
+                "description": "Get a list of all Reservation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reservation"
+                ],
+                "summary": "List all Reservation",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entities.Acommodation"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/entities.Error"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Register a new reservation for a user in a room",
                 "consumes": [
@@ -28,7 +58,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Reservations"
+                    "Reservation"
                 ],
                 "summary": "Register Reservation",
                 "parameters": [
@@ -254,6 +284,9 @@
         "entities.Acommodation": {
             "type": "object",
             "properties": {
+                "Id": {
+                    "type": "integer"
+                },
                 "checkIn": {
                     "type": "string"
                 },
@@ -262,6 +295,9 @@
                 },
                 "garage": {
                     "type": "boolean"
+                },
+                "price": {
+                    "type": "number"
                 },
                 "roomId": {
                     "type": "integer"
